--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,17 @@
   <link rel="stylesheet" href="./styles/input.scss">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-<!--  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">-->
+  <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+  <!--  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">-->
 </head>
 <body>
+<div class="index-content-holder">
   <app-root></app-root>
+</div>
+<div class="footer">
+  <span class="logo footer-logo">Andromeda</span>
+  Copyright © 2021 Rostyk Stupnytskiy. All Rights Reserved
+</div>
+
 </body>
 </html>
