--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
 <div class="footer">
   <span class="logo footer-logo">Andromeda</span>
   Copyright © 2021 Rostyk Stupnytskiy. All Rights Reserved
+  <a href="https://icons8.com/icon/82816/clock" class="icons-link">All icons by Icons8</a>
 </div>
 
 </body>
