--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Andromeda</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--  <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./styles/input.scss">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
