--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
 </div>
 <div class="footer">
   <span class="logo footer-logo">Andromeda</span>
-  Copyright © 2021 Rostyk Stupnytskiy. All Rights Reserved
+  <div class="footer-text">Copyright © 2021 Rostyk Stupnytskiy</div>
+  <div class="footer-text">All Rights Reserved</div>
   <a href="https://icons8.com/icon/82816/clock" class="icons-link">All icons by Icons8</a>
 </div>
 
